cambio en boton coachers

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <!-- Botón Coachers-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-primary btn-outline-light" href="quienesSomos.html #carouselQS"><i class="fas fa-users"></i> Coachers
+                    <a class="btn btn-xl btn-primary btn-outline-light" href="quienesSomos.html"><i class="fas fa-users"></i> Coachers
                     </a> 
                 </div>
             </div>
