cambio en quienes somos

--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -69,7 +69,9 @@
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">Capacitamos a profesionales para que potencien sus habilidades comunicacionales. Líderes de equipos, empresari@s, emprendedores, abogad@s, científic@s, docentes y más.​ Nuestros cursos de formación tienen la modalidad e-Learning y están focalizados en el entrenamiento intensivo, la superación personal y el cumplimiento de metas.</p></div>
                     
-                    <div class="col-lg-4 me-auto"><p class="lead"> Si te interesa perfeccionar tus aptitudes expresivas a la hora de hablar en público, te invitamos a ser parte de nuestra comunidad con workshops que se adaptan a tus necesidades. Junt@s podemos lograr la incorporación de estrategias saludables y persuasivas, capaces de transformar tus relaciones personales, sociales y laborales.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead"> Si te interesa perfeccionar tus aptitudes expresivas a la hora de hablar en público, te invitamos a ser parte de nuestra comunidad con workshops que se adaptan a tus necesidades. <br>
+                    Junt@s podemos lograr la incorporación de estrategias saludables y persuasivas, capaces de transformar tus relaciones personales, sociales y laborales. <br>
+                    ¡Tu tiempo es ahora!</p></div>
                 </div>
             </div>
         </section>
